--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-redux": "^7.1.34",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
